--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,14 +6,15 @@
         <h2>Sidebar</h2>
       </div>  
       <main role="main" class="col-md-9">
-        <h1>Main</h1>
-        <form action="/login" method="post">
+        <h1>Register</h1>
+        <form action="/register" method="post">
         </form>
       </main>
-      <form action="/login" method="post">
+      <form action="/register" method="post">
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
+        <input type="password" name="passwordConfirm" placeholder="Confirm Password">
+        <button type="submit">Register</button>
       </form>
     </div> <!-- end .row --> 
   </div><!-- end .container-fluid -->
