--- a/views/account.ejs
+++ b/views/account.ejs
@@ -6,14 +6,15 @@
         <h2>Sidebar</h2>
       </div>  
       <main role="main" class="col-md-9">
-        <h1>Main</h1>
-        <form action="/login" method="post">
+        <h1>My Account</h1>
+        <form action="/account" method="post">
         </form>
       </main>
-      <form action="/login" method="post">
+      <form action="/account" method="post" enctype="multipart/form-data">
+        <input type="text" name="displayName" placeholder="Display Name">
         <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
+        <input type="file" name="avatar">
+        <button type="submit">Update</button>
       </form>
     </div> <!-- end .row --> 
   </div><!-- end .container-fluid -->
