--- a/views/channels.ejs
+++ b/views/channels.ejs
@@ -6,15 +6,8 @@
         <h2>Sidebar</h2>
       </div>  
       <main role="main" class="col-md-9">
-        <h1>Main</h1>
-        <form action="/login" method="post">
-        </form>
+        <h1>Channels</h1>
       </main>
-      <form action="/login" method="post">
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
-      </form>
     </div> <!-- end .row --> 
   </div><!-- end .container-fluid -->
 </div><!-- end #main -->
