--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,21 +1,22 @@
 <%- include('partials/header'); %> 
+
+
 <div id="main">
   <div class="container-fluid">
     <div class="row">
-      <div id="sidebar" class="col-md-3">
-        <h2>Sidebar</h2>
-      </div>  
-      <main role="main" class="col-md-9">
+      <main role="main" class="col">
         <h1>My Account</h1>
-        <form action="/account" method="post">
+        <form action="/account" method="post" enctype="multipart/form-data">
+          <input type="text" name="displayName" placeholder="Display Name" value="<%= locals.user.displayName %>">
+          <% if (locals.user.photoURL) { %>
+            <p class="avatar">
+              <img src="<%= locals.user.photoURL %>" alt="">
+            </p>
+          <% } %>
+          <input type="file" name="avatar">
+          <button type="submit">Update</button>
         </form>
       </main>
-      <form action="/account" method="post" enctype="multipart/form-data">
-        <input type="text" name="displayName" placeholder="Display Name">
-        <input type="email" name="email" placeholder="Email">
-        <input type="file" name="avatar">
-        <button type="submit">Update</button>
-      </form>
     </div> <!-- end .row --> 
   </div><!-- end .container-fluid -->
 </div><!-- end #main -->
