--- a/views/channels.ejs
+++ b/views/channels.ejs
@@ -2,10 +2,7 @@
 <div id="main">
   <div class="container-fluid">
     <div class="row">
-      <div id="sidebar" class="col-md-3">
-        <h2>Sidebar</h2>
-      </div>  
-      <main role="main" class="col-md-9">
+      <main role="main" class="col">
         <h1>Channels</h1>
       </main>
     </div> <!-- end .row --> 
