--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,13 @@
 					<div id="sidebar" class="col-md-3">
 					</div>  
 					<main role="main" class="col-md-9">
-                        <h1>Login</h1>
+						<h1>Login</h1>
+						<form action="/login" method="post">
+							<input type="email" name="email" placeholder="Email">
+							<input type="password" name="password" placeholder="Password">
+							<button type="submit">Login</button>
+						</form>
+							
 					</main>
 				</div> <!-- end .row --> 
 				</div><!-- end .container-fluid -->
