adding more bottstrap forms

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row">
       <main role="main" class="col">
-        <h1>Main</h1>
+        <h1>Login Page</h1>
         <% if (locals.errors && locals.errors.login) { %>
           <div class="container">
             <div class="row justify-content-md-center">
