--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 
 		<header id="header">
 			<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-				<a id="brand" class="navbar-brand" href="#">App Name</a>
+				<a id="brand" class="navbar-brand" href="#">MyChatApp</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
